tautulli/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  tautulli
  namespace: plex
  labels:
    app:  tautulli
spec:
  selector:
    matchLabels:
      app: tautulli
  replicas: 1
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app:  tautulli
    spec:
      containers:
      - name:  tautulli
        image:  tautulli/tautulli:latest
        resources:
          limits:
            cpu: 100m
            memory: 200Mi
        ports:
        - containerPort: 8181
          name:  tautulli
        volumeMounts:
        - name: config
          mountPath: /config
        - name: localtime
          mountPath: /etc/localtime:ro
      volumes:
        - name: config
          persistentVolumeClaim: 
            claimName: tautulli-config
        - name: localtime
          hostPath:
            path: /usr/share/zoneinfo/US/Pacific
      restartPolicy: Always
