tautulli/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: tautulli
  namespace: plex
spec:
  selector:
    app: tautulli
  type: ClusterIP
  ports:
  - name: tautulli
    protocol: TCP
    port: 80
    targetPort: 8181
