tautulli/ingress.yaml
# https://kubernetes.io/docs/concepts/services-networking/ingress/#tls

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tautulli
  namespace: plex
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
  - hosts:
      - morgiana.bukkake.cafe
    secretName: tautulli-tls
  ingressClassName: nginx
  rules:
  - host: morgiana.bukkake.cafe
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: tautulli
            port:
              name: tautulli
